--- a/report_seeded_region_growing.ipynb
+++ b/report_seeded_region_growing.ipynb
@@ -746,8 +746,8 @@
     "\n",
     "<br>\n",
     "The dice score is a method to determine the accuracy of the segmentation. Thereby, a ground truth image is compared with\n",
-    "the result image of the algorithm. The dice score is defined as follows:\n",
-    "\n",
+    "the result image of the algorithm. The ground truth image is a given result picture. The dice score is defined as follows:\n",
+    "<br>\n",
     "$$ DSC = \\frac{ 2 \\times |S \\cap G|}{|S| + |G|} $$\n",
     "<br>\n",
     "The intersection is the number of pixels that have the same value in the ground truth and result image. The doubled\n",
@@ -758,11 +758,14 @@
     "to consider even small regions, for example when there are proportionally few cells compared to the background.\n",
     "\n",
     "$$\\overline{DSC}=\\frac{1}{2} \\sum\\limits_{i=1}^{2} \\left(\\frac{2 \\times |S_i \\cap G_i|}{|S_i|+|G_i|}\\right)$$\n",
-    "<br>\n",
+    "\n",
     "Thereby, two regions were considered: cells and background. For each region, the dice score was calculated individually\n",
     "and then weighted equally. With that every region has the same influence on the result in spite of the size.\n",
     "The background was defined as the largest region and received another value than every other region in order to create a\n",
-    "binary array.\n",
+    "binary array. With that the ground truth and the result image are comparable and do not depend on different region numbers for every cell.\n",
+    "The weighted dice score is important because the background has often a higher proportion in the total image. So loosing cells,\n",
+    "could not have such a high impact on the unweighted dice score as desired.\n",
+    "\n",
     "\n",
     "# Results\n",
     "\n",
@@ -937,13 +940,88 @@
     "Removing the border as well leads to bigger missing nuclei parts and might make it impossible to compensate the missing\n",
     "parts in region merging.\n",
     "That's why it is important to choose a threshold which keeps the nuclei completely intact,\n",
-    "if bright spots and borders are excised.\n"
+    "if bright spots and borders are excised.\n",
+    "\n",
+    "## Evaluation of preprocessing\n",
+    "To test, which preprocessing method leads to the best result, different clipping methods and filters were compared. The\n",
+    "total algorithm for seeded region growing was applied to a fraction of an image. Using the weighted and unweighted dice\n",
+    "score, the best parameters where defined for every image. Thereby the focus was laid on the optimization of the weighted\n",
+    "dice score. The following shows the different preprocessed images:"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "image_intensity = sk.imread(\"Data/N2DH-GOWT1/img/t31.tif\")\n",
+    "image_intensity_small = image_intensity[400:500, 300:400]\n",
+    "image_clipped = ip.image_clipping(image_intensity_small,0.1*np.amax(image_intensity_small),0.9*np.amax(image_intensity_small))\n",
+    "image_clipped_extreme = ip.image_clipping_extreme(image_intensity_small, 0.03*np.amax(image_intensity_small), 0.1*np.amax(image_intensity_small))\n",
+    "image_median = ip.median_filter(image_intensity_small, 5)\n",
+    "image_gauss = ip.gaussian_filter(image_intensity_small, 3)\n",
+    "image_anisotropic = ip.anisotropic_filter(image_intensity_small)\n",
+    "ip.show_three_images_colorbar(image_intensity_small, image_clipped, image_clipped_extreme, 0.45)\n",
+    "ip.show_three_images_colorbar(image_median, image_gauss, image_anisotropic, 0.45)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "On these pictures the seeded region growing algorithm was conducted the parameters were also determined individually for every preprocessed image."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "image_gt = sk.imread(\"Data/N2DH-GOWT1/gt/man_seg31.tif\")\n",
+    "image_gt_small = image_gt[400:500, 300:400]\n",
+    "image_small_segmented = seg.seeded_segmentation(image_intensity_small, image_gt_small, 0.9, 0.1, 150)\n",
+    "image_clipped_segmented = seg.seeded_segmentation(image_clipped, image_gt_small, 0.01, 0.1, 200)\n",
+    "image_clipped_extreme_segmented = seg.seeded_segmentation(image_clipped_extreme, image_gt_small, 0.9, 0.1, 200)\n",
+    "image_median_segmented = seg.seeded_segmentation(image_median, image_gt_small, 0.9, 0.1, 150)\n",
+    "image_gauss_segmented = seg.seeded_segmentation(image_gauss, image_gt_small, 0.9, 0.1, 200)\n",
+    "image_anisotropic_segmented = seg.seeded_segmentation(image_anisotropic, image_gt_small, 0.01, 0.2, 200)\n",
+    "ip.show_three_images_colorbar(image_small_segmented, image_clipped_segmented, image_clipped_extreme_segmented, 0.45)\n",
+    "ip.show_three_images_colorbar(image_median_segmented,image_gauss_segmented, image_anisotropic_segmented, 0.45)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "It is visible that the algorithm is working well on every image. The unprocessed image has already a dice score of 0.988.\n",
+    "The highest possible dice score is 1 so preprocessing cannot increase the result significantly.\n",
+    "Only the median filter increased the result with a weighted dice score of 0.989 slightly. All other filters and clipping\n",
+    "methods decreased the dice score a little. The Gauss filter performed the worst on this data set and decreased the dice score\n",
+    "to 0.94. This might be because, the Gauss filter blurs edges and thereby makes the identification of cells harder.\n",
+    "Otherwise, the range between all values of the dice score is not significantly different, the performance on other, more complicated\n",
+    "datasets would be interesting."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
