--- a/Marie.ipynb
+++ b/Marie.ipynb
@@ -784,12 +784,40 @@
     }
    ],
    "source": [
-    "print(ds.evaluate_accuracy_unweighted(image_rm_size.copy(), img_gt), ds.evaluate_accuracy_weighted(image_rm_size.copy(), img_gt))"
+    "print(ds.evaluate_accuracy_unweighted(image_rm_size.copy(), img_gt), ds.evaluate_accuracy_weighted(image_rm_size.copy(), img_gt))\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "image_urg = sk.imread(\"Result_Pictures/Unseeded_Region_Growing/N2DH-GOWT1/urg_t01_5.tif\")\n",
+    "image_urg_small = image_urg[300:400, 400:500]\n",
+    "image_ground_truth = sk.imread(\"Data/N2DH-GOWT1/gt/man_seg01.tif\")\n",
+    "image_ground_truth_small = image_ground_truth[300:400, 400:500]\n",
+    "\n",
+    "image_merged_small = rm.region_merging(image_urg_small, image_intensity_small, 0.001, 1000)\n",
+    "score_merged = ds.evaluate_accuracy_weighted(image_merged_small, image_ground_truth_small)\n",
+    "\n",
+    "image_merged_filtered_small = ip.median_filter(image_merged_small, 3)\n",
+    "score_filtered = ds.evaluate_accuracy_weighted(image_merged_filtered_small, image_ground_truth_small)\n",
+    "\n",
+    "print(\"Dice score after merging: \" + str(score_merged) + \"\\nDice Score after filtering: \" + str(score_filtered))\n",
+    "\n",
+    "ip.show_three_images_colorbar(image_urg_small, image_merged_small, image_merged_filtered_small, 0.45)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Comparison seeded unseeded possible code\n"
     }
    }
   }
