show six images two rows

--- a/report_seeded_region_growing.ipynb
+++ b/report_seeded_region_growing.ipynb
@@ -906,8 +906,47 @@
     "### Final results\n",
     "\n",
     "--> Add results pictures seeded and unseeded region growing (normal image,gt, seeded region growing, srg clipped, urg, urg clipped and filtered )\n",
-    "--> Dice sores and short text which preprocessing\n",
-    "\n",
+    "--> Dice sores and short text which preprocessing"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sk' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-2-5ea31cff17f2>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mimage\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0msk\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mimread\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"Data/N2DL-HeLa/img/t13.tif\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[0mgt\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0msk\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mimread\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"Data/N2DL-HeLa/gt/man_seg13.tif\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[0mimage_srg\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0msk\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mimread\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"Result_Pictures/Seeded_Region_Growing/N2DL-HeLa/t13_srg_srg.tif\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mimage_srg_clipped\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0msk\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mimread\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"Result_Pictures/Seeded_Region_Growing/N2DL-HeLa/t13_srg_clipped.tif\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[0mimage_urg\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0msk\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mimread\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"Result_Pictures/Unseeded_Region_Growing/N2DL-HeLa/urg_t13_50.tif\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'sk' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "image = sk.imread(\"Data/N2DL-HeLa/img/t13.tif\")\n",
+    "gt = sk.imread(\"Data/N2DL-HeLa/gt/man_seg13.tif\")\n",
+    "image_srg = sk.imread(\"Result_Pictures/Seeded_Region_Growing/N2DL-HeLa/t13_srg_srg.tif\")\n",
+    "image_srg_clipped = sk.imread(\"Result_Pictures/Seeded_Region_Growing/N2DL-HeLa/t13_srg_clipped.tif\")\n",
+    "image_urg = sk.imread(\"Result_Pictures/Unseeded_Region_Growing/N2DL-HeLa/urg_t13_50.tif\")\n",
+    "image_urg_filtered_clipped = sk.imread(\"Result_Pictures/Unseeded_Region_Growing/N2DL-HeLa/urg_t13_clipped.tif\")\n",
+    "ip.show_six_images_two_rows(image, gt, image_srg, image_srg_clipped, image_urg, image_urg_filtered_clipped, 0.45)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## NIH3T3\n",
     "\n",
     "### Bright spots in NIH3T3 data set\n",
@@ -928,7 +967,10 @@
     "if bright spots and borders are excised."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
