Comparison 2. dataset and print

--- a/report_seeded_region_growing.ipynb
+++ b/report_seeded_region_growing.ipynb
@@ -7,7 +7,7 @@
     "\n",
     "Data Analysis MoBi SS2021, Topic 04: Biomedical image analysis\n",
     "\n",
-    "Tutor: Nicholas Peschke\n",
+    "Tutor: Nicolas Peschke\n",
     "\n",
     "Group 04: Marie Becker, Ina Jung, Laura Kaschnitz, Johanna Möller\n",
     "\n",
@@ -33,7 +33,7 @@
     "according to intensity similarity and certain size criteria.\n",
     "For difficult datasets, preprocessing and adjusting the parameters for merging are implemented to reduce noise and\n",
     "focus on the important information. The dice score evaluates the result by comparison with a manually segmented ground\n",
-    "truth image. The method leads to very good results with heigh dice scores up to 0.99 for simple segmentation tasks. The\n",
+    "truth image. The method leads to very good results with high dice scores up to 0.99 for simple segmentation tasks. The\n",
     "algorithm also works well on difficult data with a higher cell density and more noise with a dice score of ??.\n",
     "Vectorization allows acceptable speeds despite large required computing power by assigning each pixel individually and\n",
     "updating the mean values of the growing region. However, this also shows the difficulties of the method. Simultaneous\n",
@@ -903,10 +903,58 @@
     "This needs to be considered for region merging based on intensities distances. The threshold has to be adjusted to the\n",
     "darkest nuclei to prevent loosing nuclei.\n",
     "\n",
-    "### Final results\n",
+    "### Final results"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "image = sk.imread(\"Data/N2DL-HeLa/img/t13.tif\")\n",
+    "gt = sk.imread(\"Data/N2DL-HeLa/gt/man_seg13.tif\")\n",
+    "image_srg = sk.imread(\"Result_Pictures/Seeded_Region_Growing/N2DL-HeLa/t13_srg_srg.tif\")\n",
+    "image_srg_clipped = sk.imread(\"Result_Pictures/Seeded_Region_Growing/N2DL-HeLa/t13_srg_clipped.tif\")\n",
+    "image_urg = sk.imread(\"Result_Pictures/Unseeded_Region_Growing/N2DL-HeLa/urg_t13_50.tif\")\n",
+    "image_urg_filtered_clipped = sk.imread(\"Result_Pictures/Unseeded_Region_Growing/N2DL-HeLa/urg_t13_clipped.tif\")\n",
+    "ip.show_six_images_two_rows(image, image_srg, image_urg, gt, image_srg_clipped, image_urg_filtered_clipped, 0.45)\n",
+    "dice_score_weighted_srg = ds.evaluate_accuracy_weighted(image_srg_clipped, gt)\n",
+    "dice_score_unweighted_srg = ds.evaluate_accuracy_unweighted(image_srg_clipped, gt)\n",
+    "dice_score_weighted_urg = ds.evaluate_accuracy_weighted(image_urg_filtered_clipped, gt)\n",
+    "dice_score_unweighted_urg = ds.evaluate_accuracy_unweighted(image_urg_filtered_clipped, gt)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The normal image, shown in position 1, was preprocessed with the following functions and parameters:\n",
+    "- ip.subtract_minimum: image\n",
+    "- ip.image_clipping: image, 0.05 * np.amax(image), 0.15 * np.amax(image)\n",
+    "- ip.median_filter: image, 3\n",
     "\n",
-    "--> Add results pictures seeded and unseeded region growing (normal image,gt, seeded region growing, srg clipped, urg, urg clipped and filtered )\n",
-    "--> Dice sores and short text which preprocessing"
+    "The second image shows the result of the preprocessed image after seeded region growing.\n",
+    "To obtain this result image, the parameter 0.05 was used for the sd.seeds function and 20 for the sd.reduce_region_number funtion.\n",
+    "\n",
+    "On position 3, the result of the unprocessed image after unseeded region growing is shown. Preprocessing was not performed because the unseeded region growing algorithm is more robust.\n",
+    "For computing the unseeded region growing algorithm, (0,0) was selected as the start pixel and 50 as the similarity threshold.\n",
+    "\n",
+    "To compare the result images of both region growing algorithms to the ground truth image displayed on position 4, further merging and clipping steps were executed.\n",
+    "The image from position 2 was merged using the parameters 0.1 and 100. Clipping was performed to receive a binary array for dice score calculation.\n",
+    "On position 5, the final image after the whole seeded region growing algorithm is shown and can be further compared with the ground truth image.\n",
+    "Region merging and clipping were also performed on the image on position 3 with the merging parameters 0.000001 and 10000. The result is shown on position 6.\n",
+    "\n",
+    "The dice scores of the results show, that both algorithms perform well on this dataset. However, with both algorithms some cells were lost.\n",
+    "While comparing with the dice scores of the first dataset this is visible?\n",
+    "Why is unseeded better then seeded?\n"
    ],
    "metadata": {
     "collapsed": false
