--- a/Doodles/Laura_2.ipynb
+++ b/Doodles/Laura_2.ipynb
@@ -11,14 +11,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "[autoreload of _frozen_importlib failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\importlib\\__init__.py\", line 166, in reload\n",
+      "    spec = module.__spec__ = _bootstrap._find_spec(name, pkgpath, target)\n",
+      "AttributeError: module 'importlib._bootstrap' has no attribute '_find_spec'\n",
+      "]\n",
+      "[autoreload of _frozen_importlib_external failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\importlib\\__init__.py\", line 166, in reload\n",
+      "    spec = module.__spec__ = _bootstrap._find_spec(name, pkgpath, target)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 925, in _find_spec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 1349, in find_spec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 1316, in _get_spec\n",
+      "NameError: name 'isinstance' is not defined\n",
+      "]\n",
+      "[autoreload of codecs failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 410, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 347, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 317, in update_class\n",
+      "    update_instances(old, new)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 280, in update_instances\n",
+      "    ref.__class__ = new\n",
+      "TypeError: __class__ assignment: 'CodecInfo' object layout differs from 'CodecInfo'\n",
+      "]\n",
+      "[autoreload of _collections_abc failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\importlib\\__init__.py\", line 148, in reload\n",
+      "    raise ImportError(msg.format(name), name=name)\n",
+      "ImportError: module collections.abc not in sys.modules\n",
+      "]\n",
+      "[autoreload of types failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\importlib\\__init__.py\", line 139, in reload\n",
+      "    if not module or not isinstance(module, types.ModuleType):\n",
+      "AttributeError: module 'types' has no attribute 'ModuleType'\n",
+      "]\n",
+      "[autoreload of importlib failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "AttributeError: module 'importlib' has no attribute 'reload'\n",
+      "]\n",
+      "[autoreload of functools failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 410, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 347, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 317, in update_class\n",
+      "    update_instances(old, new)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 280, in update_instances\n",
+      "    ref.__class__ = new\n",
+      "TypeError: __class__ assignment only supported for heap types or ModuleType subclasses\n",
+      "]\n",
+      "[autoreload of enum failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 410, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 347, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 287, in update_class\n",
+      "    old_obj = getattr(old, key)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\enum.py\", line 405, in __getattr__\n",
+      "    raise AttributeError(name) from None\n",
+      "AttributeError: name\n",
+      "]\n",
+      "[autoreload of sre_constants failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 410, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 347, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 317, in update_class\n",
+      "    update_instances(old, new)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 280, in update_instances\n",
+      "    ref.__class__ = new\n",
+      "TypeError: __class__ assignment: '_NamedIntConstant' object layout differs from '_NamedIntConstant'\n",
+      "]\n",
+      "[autoreload of re failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 410, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 347, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 317, in update_class\n",
+      "    update_instances(old, new)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 280, in update_instances\n",
+      "    ref.__class__ = new\n",
+      "TypeError: __class__ assignment: 'RegexFlag' object layout differs from 'RegexFlag'\n",
+      "]\n",
+      "[autoreload of typing failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 394, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\importlib\\__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 613, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 790, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 228, in _call_with_frames_removed\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\typing.py\", line 1644, in <module>\n",
+      "    Hashable = _alias(collections.abc.Hashable, 0)  # Not generic.\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\collections\\__init__.py\", line 68, in __getattr__\n",
+      "    raise AttributeError(f'module {__name__!r} has no attribute {name!r}')\n",
+      "AttributeError: module 'collections' has no attribute 'abc'\n",
+      "]\n",
+      "[autoreload of weakref failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 410, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 347, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 317, in update_class\n",
+      "    update_instances(old, new)\n",
+      "  File \"C:\\Users\\marie\\anaconda3\\envs\\environmentGroup4\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 280, in update_instances\n",
+      "    ref.__class__ = new\n",
+      "TypeError: __class__ assignment: 'WeakMethod' object layout differs from 'WeakMethod'\n",
+      "]\n"
      ]
     }
    ],
@@ -42,26 +192,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'pandas' has no attribute 'DataFrame'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-57-dfff69e82463>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mpreprocessing\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;33m[\u001B[0m\u001B[1;34m'unprocessed'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'unprocessed'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'clipped'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'clipped'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'extreme clipped'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'extreme clipped'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'median filtered'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'median filtered'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'gauss filtered'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'gauss filtered'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 6\u001B[1;33m \u001B[0mdf\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mpd\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mDataFrame\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mlist\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mzip\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdice_score\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0msegmentation_method\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpreprocessing\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mcolumns\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcolumns_names\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      7\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      8\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdf\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mAttributeError\u001B[0m: module 'pandas' has no attribute 'DataFrame'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "columns_names = [\"Dice Score\", \"Seeded\", \"Preprocessing\"]\n",
     "dice_score = [0.901, 0.945, 0.983, 0.984, 0.980, 0.979, 0.911, 0.984, 0.889, 0.962]\n",
@@ -75,7 +214,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -185,7 +325,7 @@
     }
    ],
    "source": [
-    "df = DataFrame(zip(x * 3, [\"y\"] * 3 + [\"z\"] * 3 + [\"k\"] * 3, y + z + k), columns=[\"time\", \"kind\", \"data\"])\n",
+    "df = pd.DataFrame(zip(x * 3, [\"y\"] * 3 + [\"z\"] * 3 + [\"k\"] * 3, y + z + k), columns=[\"time\", \"kind\", \"data\"])\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(x=\"time\", hue=\"kind\", y=\"data\", data=df)\n",
     "plt.show()"
