--- a/report_seeded_region_growing.ipynb
+++ b/report_seeded_region_growing.ipynb
@@ -1601,10 +1601,11 @@
     "\n",
     "Hence, a new algorithm was implemented. It was evaluated to use numpy arrays or pandas data frames to vectorize the\n",
     "algorithm and decided to use numpy because of faster runtimes. Instead of storing only the smallest distance of every\n",
-    "neighboring pixel to one of its adjacent regions, we are storing every distance. Moreover, the use of for loops was\n",
-    "almost completely reduced, and the algorithm was vectorized. A decrease of runtime by more than 20 times on a part of an\n",
+    "neighboring pixel to one of its adjacent regions, every distance is stored and does not need to be recalculated.\n",
+    "Moreover, the use of for loops was almost completely reduced, and the algorithm was vectorized.\n",
+    "A decrease of runtime by more than 20 times on a part of an\n",
     "image could be achieved. The improvement on the whole image is even bigger. This allows to execute the region growing\n",
-    "algorithm on a whole image overnight."
+    "algorithm on a whole image in 24 hours."
    ],
    "metadata": {
     "collapsed": false,
@@ -1666,13 +1667,8 @@
    "cell_type": "markdown",
    "source": [
     "### Comparison of Seeded and Unseeded Region Growing\n",
-    "\n",
     "Whilst comparing both algorithms, no significant runtime difference between both algorithms can be discovered if\n",
-    "compared on a small image. The runtime difference lies within the $$3 \\sigma$$ intervall.\n",
-    "\n",
-    "If the two algorithms are compared using a whole image, the unseeded region growing algorithm is significantly\n",
-    "slower. The seeded region growing algorithm took about 11 hours when using a whole image, while the unseeded\n",
-    "region growing algorithm took about 19 hours."
+    "compared on a small image. The runtime difference lies within the $$3 \\sigma$$ interval."
    ],
    "metadata": {
     "collapsed": false,
@@ -1724,14 +1720,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Memory errors\n",
+    "## Memory error\n",
     "In the region merging algorithm an array with the same number of rows and columns as the region number\n",
     "is needed. If too many seeds are found in the seed detection, too many regions are detected in the seeded region\n",
-    "growing, and the region merging algorithm can not be performed. When trying to do so, the error message\n",
-    "\"Unable to allocate 33.0 GiB for an array with shape (66518, 66518) and data type float64\" appears.\n",
+    "growing, and the region merging algorithm can not be performed. When trying to do so, a memory error occurs.\n",
+    "That's why a method to reduce the seed number was implemented.\n",
     "\n",
     "# Discussion\n",
-    "\n",
     "Despite the challenges of the different data sets images of each data set could be segmented successfully\n",
     "using preprocessing. Especially in the first data set N2DH-GOWT1 satisfying results and high dice scores were obtained.\n",
     "In the second data set (N2DL-Hela) normalizing and preprocessing could be used to gain high dice scores.\n",
@@ -1741,20 +1736,36 @@
     "However, bright spots in the same intensity range as nuclei can not be removed.\n",
     "This problem needs to be solved in future research.\n",
     "\n",
+    "Preprocessing, especially clipping, of the images improved the results and is therefore recommended.\n",
+    "For filtering a median filter showed better results compared to gauss because it does not blur edges and should be used.\n",
+    "\n",
     "Although both, seeded and unseeded region growing, lead to good results,\n",
     "unseeded region growing was more robust against challenging images.\n",
+    "One reason for that is the seed detection in seeded region growing which often fails to detect nuclei\n",
+    "or background regions between nuclei.\n",
+    "Increasing the number of seeds can't solve this problem because it leads to memory errors.\n",
+    "Alongside less memory errors and smaller execution times for region merging, the smaller region number in unseeded\n",
+    "region growing leads to regions with several nuclei. This compensates small intensity distances of nuclei to their\n",
+    "background in bright background regions or because of dark nuclei.\n",
     "An advantage and disadvantage of unseeded region growing is its smaller number of region.\n",
-    "This prevents memory errors and leads to smaller execution times for region merging\n",
-    "but additional filtering methods need to be used to gain good results.\n",
+    "However, a disadvantage of unseeded region growing are additional filtering methods which need to be applied after region merging.\n",
     "Since both algorithms still showed good results and dice scores they can be considered in future research.\n",
+    "\n",
+    "For evaluation only the dice score was used.\n",
+    "Thereby, the weighted dice score lead to more meaningful results compared to the unweighted dice score because it\n",
+    "considers nuclei and background equally.\n",
+    "Still high weighted dice scores are received even if many nuclei are missing because of the impact of the background.\n",
+    "Differences of ground truth images, and the received results are partly caused\n",
+    "by mistakes in the ground truth images which don't show some nuclei, especially on image borders.\n",
+    "Because of these to problems other evaluation methods should be considered in future research.\n",
     "\n",
     "Despite the big runtime improvements, the runtime in both proposed algorithms is still too long. An algorithm which\n",
     "labels more than one pixel in one iteration could fix this problem. That's why we recommend using another algorithm\n",
     "of another paper in following research.\n",
     "\n",
-    "All in all, both segmentation lead to satisfactory results with specially adjusted parameters to each image.\n",
+    "All in all, both segmentation lead to satisfactory results with specifically adjusted parameters for each image.\n",
     "Nevertheless, in future research the process of determining parameters needs to be automated\n",
-    "to make it available for everyone and to gain real time reduction in nuclei detection via image segmentation."
+    "to make it available for everyone and to gain actual time reduction in nuclei detection via image segmentation."
    ],
    "metadata": {
     "collapsed": false,
