--- a/report_seeded_region_growing.ipynb
+++ b/report_seeded_region_growing.ipynb
@@ -164,19 +164,12 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import numpy as np\n",
     "import skimage.io as sk\n",
-    "import matplotlib.pyplot as plt\n",
     "from Functions import image_processing as ip\n",
     "from Functions import seeded_region_growing as srg\n",
     "from Functions import unseeded_region_growing as urg\n",
     "from Functions import seed_detection as sd\n",
-    "from Functions import region_merging as rm\n",
-    "from Functions import old_seeded_region_growing as old_srg\n",
-    "from Functions import old_unseeded_region_growing as old_urg\n",
-    "from Functions import dice_score as ds\n",
-    "from Functions import segmentation as seg\n",
-    "from Functions import visualization as vis\n"
+    "from Functions import visualization as vis"
    ],
    "metadata": {
     "collapsed": false,
@@ -312,18 +305,15 @@
    "cell_type": "markdown",
    "source": [
     "## Filtering\n",
+    "Median ang gaussian filtering were considered to improve the segmentation results.\n",
     "\n",
-    "Different filtering methods were considered to improve the segmentation results.\n",
-    "\n",
-    "### Median and Gaussian Filter\n",
     "The median filter sorts the intensity values of the specified neighborhood and assigns the median value to the central pixel.\n",
     "\n",
     "The Gaussian filter is a linear filter that weights the intensity values of the specified neighborhood with a Gaussian distribution.\n",
     "Subsequently, the calculated mean value is assigned to the central pixel.\n",
     "Due to the weighting, the Gaussian filter is an improvement of the Mean filter.\n",
     "\n",
-    "A pre-implemented function of the numpy module has been used for both filtering methods.\n",
-    "\n"
+    "A pre-implemented function of the numpy module has been used for both filtering methods."
    ],
    "metadata": {
     "collapsed": false,
@@ -1137,7 +1127,8 @@
     "data set high dice scores were obtained without preprocessing. Using the weighted and unweighted dice\n",
     "score, the best parameters where defined for every image. Thereby the focus was laid on the optimization of the weighted\n",
     "dice score.\n",
-    "The following shows the different preprocessed images (unprocessed, clipped, extreme clipped, median filtered, gauss filtered, gt)."
+    "The first row of the following images shows the different preprocessing methods\n",
+    "(unprocessed, clipped, extreme clipped, median filtered, gauss filtered, gt)."
    ],
    "metadata": {
     "collapsed": false,
@@ -1206,23 +1197,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "On these pictures the seeded (first row) and unseeded (second row) region growing algorithm were conducted. The parameters were determined individually\n",
-    "for every preprocessed image."
+    "On these pictures the seeded (second row) and unseeded (third row) region growing algorithm were conducted. The parameters were determined individually\n",
+    "for every preprocessed image.\n",
+    "The obtained weighted dice scores are shown in this bar plot."
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "The obtained weighted dice scores are shown in this bar plot."
-   ],
-   "metadata": {
-    "collapsed": false
    }
   },
   {
@@ -1271,14 +1254,7 @@
     "## Comparison seeded and unseeded region growing\n",
     "For both, seeded and unseeded region growing, parameters need to be determined for every image and data set individually.\n",
     "However, after optimizing preprocessing methods and parameters unseeded region growing lead to better results,\n",
-    "especially in challenging data sets. This can be seen in the bar chart below.\n",
-    "\n",
-    "\n",
-    "One reason for that is the seed detection\n",
-    "\n",
-    "\n",
-    "weniger schnell rausgemerged große regionen\n",
-    "B"
+    "especially in challenging data sets. This can be seen in the bar chart below."
    ],
    "metadata": {
     "collapsed": false,
@@ -1316,9 +1292,7 @@
    "cell_type": "markdown",
    "source": [
     "# Challenges\n",
-    "\n",
     "## Runtime errors\n",
-    "\n",
     "### Optimizing Seeded Region Growing Algorithm\n",
     "The paper (Quelle) the used seeded region growing algorithm is based on labels every pixel one by one which leads to\n",
     "long runtimes. That's why many runtime problems were encountered, especially with the first seeded region growing\n",
@@ -1480,7 +1454,7 @@
     "Still high weighted dice scores are received even if many nuclei are missing because of the impact of the background.\n",
     "Differences of ground truth images, and the received results are partly caused\n",
     "by mistakes in the ground truth images which don't show some nuclei, especially on image borders.\n",
-    "Because of these to problems other evaluation methods should be considered in future research.\n",
+    "Because of these to problems, other evaluation methods should be considered in future research.\n",
     "\n",
     "Despite the big runtime improvements, the runtime in both proposed algorithms is still too long. An algorithm which\n",
     "labels more than one pixel in one iteration could fix this problem. That's why we recommend using another algorithm\n",
